--- a/src/app/modules/analytics/v2/dashboard.component.html
+++ b/src/app/modules/analytics/v2/dashboard.component.html
@@ -1,31 +1,39 @@
-<m-pageLayout [menu]="menu">
-  <div class="m-analyticsDashboard" *ngIf="ready$ | async" m-pageLayout__main>
-    <m-dashboardLayout>
-      <ng-container m-dashboardLayout__header>
-        <div>
-          <h3>
-            {{ category$ | async | titlecase }}
-          </h3>
-        </div>
-        <div
-          class="m-analyticsDashboard__headerFilters"
-          *ngIf="layout === 'chart'"
-        >
-          <!-- <div *ngIf="session.isAdmin()" class="m-analytics__channelSearch"> -->
-          <!-- <div class="m-analyticsDashboard__channelSearch">
+<ng-template #body>
+  <ng-template #headerFilters>
+    <div class="m-analyticsDashboard__headerFilters" *ngIf="layout === 'chart'">
+      <!-- <div *ngIf="session.isAdmin()" class="m-analytics__channelSearch"> -->
+      <!-- <div class="m-analyticsDashboard__channelSearch">
                 <m-analytics__search></m-analytics__search>
               </div> -->
-          <!-- <div class="m-analyticsDashboard__channelFilter" *ngIf="session.isAdmin()">
+      <!-- <div class="m-analyticsDashboard__channelFilter" *ngIf="session.isAdmin()">
                 <m-dropdownSelector [filter]="channelFilter"></m-dropdownSelector>
               </div> -->
-          <div class="m-analyticsDashboard__timespanFilter">
-            <m-dropdownSelector
-              [filter]="timespanFilter"
-              [showLabel]="false"
-              (selectionMade)="filterSelectionMade($event)"
-            ></m-dropdownSelector>
+      <div class="m-analyticsDashboard__timespanFilter">
+        <m-dropdownSelector
+          [filter]="timespanFilter"
+          [showLabel]="false"
+          (selectionMade)="filterSelectionMade($event)"
+        ></m-dropdownSelector>
+      </div>
+    </div>
+  </ng-template>
+
+  <div class="m-analyticsDashboard" *ngIf="ready$ | async">
+    <m-dashboardLayout>
+      <ng-container m-dashboardLayout__header>
+        <ng-container
+          *mIfFeature="'navigation'; else oldNavHeader"
+        ></ng-container>
+        <ng-template #oldNavHeader>
+          <div>
+            <h3>
+              {{ category$ | async | titlecase }}
+            </h3>
           </div>
-        </div>
+          <ng-container
+            *mIfFeature="'navigation'; else headerFilters"
+          ></ng-container>
+        </ng-template>
       </ng-container>
       <p
         m-dashboardLayout__body
@@ -63,4 +71,14 @@
       ></m-analytics__layout--summary>
     </m-dashboardLayout>
   </div>
-</m-pageLayout>
+</ng-template>
+
+<ng-container *mIfFeature="'navigation'; else oldNav">
+  <ng-container *ngTemplateOutlet="body"></ng-container>
+</ng-container>
+
+<ng-template #oldNav>
+  <m-pageLayout [menu]="menu">
+    <ng-container *ngTemplateOutlet="body" m-pageLayout__main></ng-container>
+  </m-pageLayout>
+</ng-template>
