--- a/src/app/modules/suggestions/sidebar.component.scss
+++ b/src/app/modules/suggestions/sidebar.component.scss
@@ -23,7 +23,7 @@
   padding: 0;
   list-style: none;
   @include m-theme() {
-    background-color: themed($m-white);
+    background-color: themed($m-bgColor--secondary);
   }
 }
 
