--- a/src/app/common/layout/v2-topbar/v2-topbar.component.scss
+++ b/src/app/common/layout/v2-topbar/v2-topbar.component.scss
@@ -18,7 +18,7 @@
   transform: translateZ(0);
 
   @include m-theme() {
-    background-color: themed($m-white);
+    background-color: themed($m-bgColor--secondary);
     border-bottom: 1px solid themed($m-grey-50);
   }
 
