Make the blue photo for onboarding open the file selector dialog

--- a/src/app/modules/onboarding-v2/steps/avatar/avatar.component.html
+++ b/src/app/modules/onboarding-v2/steps/avatar/avatar.component.html
@@ -19,7 +19,11 @@
     </image-cropper>
   </ng-container>
 
-  <img [src]="cdnAssetsUrl + 'assets/photos.png'" *ngIf="!cropping" />
+  <img
+    [src]="cdnAssetsUrl + 'assets/photos.png'"
+    (click)="uploadPhoto()"
+    *ngIf="!cropping"
+  />
 
   <input
     id="onboarding-avatar-input"
