--- a/src/app/modules/onboarding-v2/steps/avatar/avatar.component.scss
+++ b/src/app/modules/onboarding-v2/steps/avatar/avatar.component.scss
@@ -10,6 +10,7 @@ m-onboarding--avatarStep {
     & > img {
       width: 125px;
       margin: 0 auto 100px;
+      cursor: pointer;
     }
 
     input[type='file'] {
