--- a/src/app/modules/media/modal/modal.component.scss
+++ b/src/app/modules/media/modal/modal.component.scss
@@ -574,6 +574,11 @@ m-media--modal {
     @include m-theme() {
       border-bottom: 1px solid themed($m-grey-100);
     }
+    .m-mediaModal__actionButton--share {
+      @include m-theme() {
+        color: themed($m-blue-grey-600);
+      }
+    }
   }
   .m-wire-button > .ion-icon {
     transform: scale(1.4);
