--- a/src/app/common/layout/nested-menu/nested-menu.component.html
+++ b/src/app/common/layout/nested-menu/nested-menu.component.html
@@ -1,1 +1,24 @@
-<p>nested-menu works!</p>
+<div class="m-nestedMenu" [ngClass]="{ isNested: isNested }">
+  <div
+    class="m-nestedMenu__menuWrapper"
+    *ngFor="let menu of menus; let first = first"
+  >
+    <div class="m-nestedMenu__headerWrapper">
+      <ng-container *ngIf="first">
+        <div class="m-nestedMenu__backButton" *ngIf="isNested">
+          <i class="material-icons">arrow_back</i><span>Back</span>
+        </div>
+      </ng-container>
+      <div class="m-nestedMenu__headerLabel">{{ menu.header.label }}</div>
+    </div>
+    <ng-container *ngFor="let item of menu.items">
+      <div
+        class="m-nestedMenu__itemWrapper"
+        (click)="itemClicked(menu.header.id, item.id)"
+      >
+        <span>{{ item.label }}</span>
+        <i class="material-icons">chevron_right</i>
+      </div>
+    </ng-container>
+  </div>
+</div>
