--- a/src/app/modules/settings-v2/settings-v2.component.scss
+++ b/src/app/modules/settings-v2/settings-v2.component.scss
@@ -1,4 +1,81 @@
 m-settingsV2 {
   grid-area: content / span 2;
   min-width: 0;
+
+  .m-settingsV2 {
+    display: flex;
+    font-weight: 300;
+    .m-settingsV2__mainMenu {
+      flex: 0 1 269px;
+      @media screen and (max-width: $max-mobile) {
+        display: none;
+      }
+    }
+    .m-settingsV2__subMenu,
+    .m-settingsV2__settingsView {
+      flex: 1 0 auto;
+      max-width: 637px;
+    }
+  }
+  .m-settingsV2__settingsView {
+    font-size: 16px;
+    line-height: 21px;
+    @include m-theme() {
+      color: themed($m-textColor--primary);
+    }
+    & > * {
+      &:not(.m-settingsV2__headerWrapper) {
+        margin: 0 71px;
+        @media screen and (max-width: $max-mobile) {
+          margin-left: 0 24px;
+        }
+      }
+    }
+    .m-settingsV2__headerWrapper {
+      display: flex;
+      flex-flow: row nowrap;
+      margin: 0 71px 0 35px;
+      font-size: 24px;
+      line-height: 32px;
+      font-weight: 400;
+
+      @media screen and (max-width: $max-mobile) {
+        flex-flow: column nowrap;
+        margin: 0 24px;
+      }
+
+      .m-settingsV2__backButton {
+        flex: 0 0 35px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        @include m-theme() {
+          color: themed($m-textColor--secondary);
+        }
+        span {
+          display: none;
+          @media screen and (max-width: $max-mobile) {
+            display: inline-flex;
+            margin: 0;
+          }
+        }
+      }
+      .m-settingsV2__headerLabel {
+        flex: 1 0 auto;
+      }
+    }
+    .m-settingsV2__desc {
+      margin: 11px 0 48px 0;
+      @include m-theme() {
+        color: themed($m-textColor--tertiary);
+      }
+      @media screen and (max-width: $max-mobile) {
+        font-size: 15px;
+        line-height: 20px;
+      }
+    }
+
+    .m-settingsV2__formField {
+    }
+  }
 }
