--- a/src/app/modules/settings-v2/settings-v2.component.scss
+++ b/src/app/modules/settings-v2/settings-v2.component.scss
@@ -13,7 +13,8 @@ m-settingsV2 {
     }
     .m-settingsV2__subMenu,
     .m-settingsV2__settingsView {
-      flex: 1 0 auto;
+      flex: 1 0 340px;
+      // flex: 1 0 auto;
       max-width: 637px;
     }
   }
