--- a/src/app/common/layout/sidebar/navigation.component.scss
+++ b/src/app/common/layout/sidebar/navigation.component.scss
@@ -70,7 +70,7 @@ m-sidebar--navigation {
     padding-top: 26px;
     min-width: 0;
     display: block;
-    width: 250px; // TODO make this a constant
+    width: 50px; // TODO make this a constant // TODOOJM put back 250px
     height: calc(100vh - 75px);
     overflow: scroll;
     position: fixed;
