--- a/src/app/common/layout/nested-menu/nested-menu.component.html
+++ b/src/app/common/layout/nested-menu/nested-menu.component.html
@@ -5,20 +5,22 @@
   >
     <div class="m-nestedMenu__headerWrapper">
       <ng-container *ngIf="first">
-        <div class="m-nestedMenu__backButton" *ngIf="isNested">
+        <a class="m-nestedMenu__backButton" *ngIf="isNested" (click)="goBack()">
           <i class="material-icons">arrow_back</i><span>Back</span>
-        </div>
+        </a>
       </ng-container>
       <div class="m-nestedMenu__headerLabel">{{ menu.header.label }}</div>
     </div>
     <ng-container *ngFor="let item of menu.items">
-      <div
+      <a
         class="m-nestedMenu__itemWrapper"
         (click)="itemClicked(menu.header.id, item.id)"
+        [routerLink]="item.id"
+        routerLinkActive="m-nestedMenu__itemWrapper--active"
       >
         <span>{{ item.label }}</span>
         <i class="material-icons">chevron_right</i>
-      </div>
+      </a>
     </ng-container>
   </div>
 </div>
