--- a/src/app/modules/settings-v2/settings-v2.component.html
+++ b/src/app/modules/settings-v2/settings-v2.component.html
@@ -1,6 +1,7 @@
 <div class="m-settingsV2">
   <m-nestedMenu
     class="m-settingsV2__mainMenu"
+    [ngClass]="{ mobileVisible: mobileVisible }"
     [menus]="mainMenus"
   ></m-nestedMenu>
   <router-outlet></router-outlet>
