--- a/src/app/modules/settings-v2/settings-v2.component.scss
+++ b/src/app/modules/settings-v2/settings-v2.component.scss
@@ -25,6 +25,9 @@ m-settingsV2 {
     @include m-theme() {
       color: themed($m-textColor--primary);
     }
+    @media screen and (max-width: $max-mobile) {
+      margin-top: 13px;
+    }
     & > * {
       &:not(.m-settingsV2__headerWrapper) {
         margin: 0 71px;
@@ -48,16 +51,22 @@ m-settingsV2 {
 
       .m-settingsV2__backButton {
         cursor: pointer;
-        margin-bottom: 0;
-        text-decoration: none;
         font-weight: 300;
         flex: 0 0 35px;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
+
         transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-        @include m-theme() {
-          color: themed($m-textColor--secondary);
+        a {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+
+          cursor: pointer;
+          text-decoration: none;
+          margin-bottom: 0;
+
+          @include m-theme() {
+            color: themed($m-textColor--secondary);
+          }
         }
         span {
           font-size: 15px;
@@ -67,19 +76,19 @@ m-settingsV2 {
 
           @media screen and (max-width: $max-mobile) {
             display: inline-flex;
-            margin: 0;
           }
         }
         i {
-          font-size: 17px;
+          font-size: 24px;
+          line-height: inherit;
           transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+          @media screen and (max-width: $max-mobile) {
+            font-size: 17px;
+          }
         }
         &:hover {
-          // @include m-theme() {
-          //   color: rgba(themed($m-textColor--secondary), 0.6);
-          // }
           i {
-            transform: scale(1.2);
+            transform: scale(1.1);
           }
         }
       }
