--- a/src/app/modules/settings-v2/layout/tier-two-view/tier-two-view.component.html
+++ b/src/app/modules/settings-v2/layout/tier-two-view/tier-two-view.component.html
@@ -9,9 +9,11 @@
   <ng-container *ngIf="!isMenu">
     <div class="m-settingsV2__settingsView">
       <div class="m-settingsV2__headerWrapper">
-        <a class="m-settingsV2__backButton" (click)="goBack()">
-          <i class="material-icons">arrow_back</i><span>Back</span>
-        </a>
+        <div class="m-settingsV2__backButton">
+          <a (click)="goBack()">
+            <i class="material-icons">arrow_back</i><span>Back</span>
+          </a>
+        </div>
         <div class="m-settingsV2__headerLabel">{{ routeData.title }}</div>
       </div>
       <div class="m-settingsV2__viewWrapper">
