refactor secondary panel component to accommodate mobile mockup

--- a/src/app/common/layout/nested-menu/nested-menu.component.html
+++ b/src/app/common/layout/nested-menu/nested-menu.component.html
@@ -17,7 +17,7 @@
       <a
         class="m-nestedMenu__itemWrapper"
         (click)="itemClicked(menu.header.id, item.id)"
-        [routerLink]="item.id"
+        [routerLink]="isNested ? item.id : ['../' + item.id]"
         routerLinkActive="m-nestedMenu__itemWrapper--active"
       >
         <span>{{ item.label }}</span>
