--- a/src/app/modules/media/modal/modal.component.html
+++ b/src/app/modules/media/modal/modal.component.html
@@ -82,6 +82,7 @@
             <div
               class="m-mature-overlay"
               (click)="toggleMatureVisibility()"
+              *ngIf="canToggleMatureVideoOverlay"
               [style.width]="mediaWidth + 'px'"
               [style.height]="mediaHeight + 'px'"
             >
@@ -122,6 +123,7 @@
             <div
               class="m-mature-overlay"
               (click)="toggleMatureVisibility()"
+              *ngIf="canToggleMatureVideoOverlay"
               [style.width]="mediaWidth + 'px'"
               [style.height]="mediaHeight + 'px'"
             >
@@ -363,6 +365,8 @@
                 m-read-more
                 *ngIf="
                   this.contentType !== 'blog' &&
+                  this.contentType !== 'video' &&
+                  this.contentType !== 'rich-embed' &&
                   (this.entity.title ||
                     this.entity.message ||
                     this.entity.description)
