--- a/src/app/modules/groups/profile/feed/legacy.html
+++ b/src/app/modules/groups/profile/feed/legacy.html
@@ -35,7 +35,7 @@
       *ngFor="let activity of pinned; let i = index"
       [object]="activity"
       [canDelete]="group['is:owner'] || group['is:moderator']"
-      (delete)="delete(activity)"
+      (deleted)="delete($event)"
       [showRatingToggle]="true"
       [slot]="i + 1"
       class="mdl-card item"
@@ -48,7 +48,7 @@
       class="mdl-card item"
       [object]="a"
       [canDelete]="group['is:owner'] || group['is:moderator']"
-      (delete)="delete(a)"
+      (deleted)="delete(a)"
       [slot]="i + (pinned?.length || 0) + 1"
       [attr.data-minds-activity-guid]="a.guid"
     >
