--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -18,7 +18,7 @@
     *ngFor="let preActivity of prepended"
     [object]="preActivity"
     [boostToggle]="preActivity.boostToggle"
-    (delete)="delete(preActivity)"
+    (deleted)="delete(preActivity)"
     [showRatingToggle]="true"
     class="mdl-card m-border item"
     [attr.minds-data-activity-guid]="preActivity.guid"
@@ -46,7 +46,7 @@
       class="mdl-card m-border item"
       [object]="activity"
       [boostToggle]="activity.boostToggle"
-      (delete)="delete(activity)"
+      (deleted)="delete($event)"
       [showRatingToggle]="true"
       [slot]="i + 1"
       [attr.data-minds-activity-guid]="activity.guid"
