--- a/src/app/modules/groups/profile/review/review.component.html
+++ b/src/app/modules/groups/profile/review/review.component.html
@@ -6,7 +6,7 @@
         class="mdl-card item"
         [object]="entity"
         [canDelete]="group['is:owner'] || group['is:moderator']"
-        (delete)="delete(entity)"
+        (deleted)="delete(entity)"
         [hideTabs]="true"
         [attr.data-minds-activity-guid]="entity.guid"
       >
