--- a/src/app/modules/newsfeed/feed-grid/feed-grid.component.html
+++ b/src/app/modules/newsfeed/feed-grid/feed-grid.component.html
@@ -3,6 +3,7 @@
     [entity]="entity"
     *ngIf="entity$ | async as entity"
     [displayOptions]="{ showComments: false, v2: true }"
+    (deleted)="delete($event)"
     [slot]="i"
   ></m-newsfeed__entity>
 </div>
