--- a/src/app/modules/newsfeed/feeds/tags/tags.component.html
+++ b/src/app/modules/newsfeed/feeds/tags/tags.component.html
@@ -3,7 +3,7 @@
     *ngFor="let activity of newsfeed; let i = index"
     [object]="activity"
     [boostToggle]="activity.boostToggle"
-    (delete)="delete(activity)"
+    (deleted)="delete($event)"
     [showRatingToggle]="true"
     class="mdl-card m-border item"
     [slot]="i + 1"
