--- a/src/app/modules/newsfeed/feeds/top.component.html
+++ b/src/app/modules/newsfeed/feeds/top.component.html
@@ -5,7 +5,7 @@
     *ngFor="let activity of newsfeed; let i = index"
     [object]="activity"
     [boostToggle]="activity.boostToggle"
-    (delete)="delete(activity)"
+    (deleted)="delete($event)"
     [showRatingToggle]="true"
     [slot]="i + 1"
     class="mdl-card m-border item"
