--- a/src/app/modules/pro/channel/home/category-content/category-content.component.html
+++ b/src/app/modules/pro/channel/home/category-content/category-content.component.html
@@ -8,5 +8,6 @@
   <m-feedGrid
     [entities]="category.entities | async"
     [maxColumns]="3"
+    (deleted)="onActivityDelete(category, $event)"
   ></m-feedGrid>
 </div>
